# alns-for-school-lunch-2e-vrp-bh-tw

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
include/heuristic/: alns.h  initialSolution.h  solution.h
include/problem/: ingredient.h  kitchen.h  node.h  problem.h  school.h  supplier.h  vehicle.h
include/utils/: config.h
instances/: admin-sch35-kch30-spl30-dmnd4749-sppg0.43.json  admin-sch35-kch30-spl30-dmnd4749-sppg0.43333333333333335-mv0.875.json  admin-sch37-kch30-spl30-dmnd6325-sppg0.50-mv0.76.json  admin-sch37-kch30-spl30-dmnd6325-sppg0.50.json  admin-sch39-kch30-spl30-dmnd5842-sppg0.37-mv1.14.json  admin-sch39-kch30-spl30-dmnd5842-sppg0.37.json  admin-sch39-kch30-spl30-dmnd6934-sppg0.4-mv0.6666666666666666.json  admin-sch39-kch30-spl30-dmnd6934-sppg0.40.json  admin-sch40-kch30-spl30-dmnd6211-sppg0.47-mv0.88.json  admin-sch40-kch30-spl30-dmnd6211-sppg0.47.json  admin-sch42-kch30-spl30-dmnd6390-sppg0.40-mv0.88.json  admin-sch42-kch30-spl30-dmnd6390-sppg0.40.json  admin-sch49-kch30-spl30-dmnd12073-sppg0.4-mv0.6666666666666666.json  admin-sch49-kch30-spl30-dmnd12073-sppg0.40.json  admin-sch49-kch30-spl30-dmnd8255-sppg0.5-mv0.5.json  admin-sch49-kch30-spl30-dmnd8255-sppg0.50.json  admin-sch51-kch30-spl30-dmnd5451-sppg0.43-mv1.31.json  admin-sch51-kch30-spl30-dmnd5451-sppg0.43.json  admin-sch52-kch30-spl30-dmnd13268-sppg0.43-mv1.14.json  admin-sch52-kch30-spl30-dmnd13268-sppg0.43.json  admin-sch53-kch30-spl30-dmnd8460-sppg0.43.json  admin-sch53-kch30-spl30-dmnd8460-sppg0.43333333333333335-mv1.3076923076923077.json  admin-sch70-kch30-spl30-dmnd11745-sppg0.57-mv0.58.json  admin-sch70-kch30-spl30-dmnd11745-sppg0.57.json  admin-sch84-kch30-spl30-dmnd20105-sppg0.5-mv0.42857142857142855.json  admin-sch84-kch30-spl30-dmnd20105-sppg0.50.json  admin-sch93-kch30-spl30-dmnd17270-sppg0.47-mv0.36.json  admin-sch93-kch30-spl30-dmnd17270-sppg0.47.json  large-sch210-kch25-spl25-dmnd34049-sppg0.52-mv0.79.json  large-sch44-kch25-spl25-dmnd8046-sppg0.4-mv0.3157894736842105.json  large-sch44-kch25-spl25-dmnd8046-sppg0.40.json  large-sch47-kch25-spl25-dmnd8296-sppg0.56-mv0.92.json  large-sch47-kch25-spl25-dmnd8296-sppg0.56.json  large-sch49-kch25-spl25-dmnd8756-sppg0.48-mv0.67.json  large-sch49-kch25-spl25-dmnd8756-sppg0.48.json  large-sch50-kch25-spl25-dmnd11429-sppg0.44-mv0.6666666666666666.json  large-sch50-kch25-spl25-dmnd11429-sppg0.44.json  large-sch50-kch25-spl25-dmnd12312-sppg0.44-mv0.47058823529411764.json  large-sch50-kch25-spl25-dmnd12312-sppg0.44.json  large-sch50-kch25-spl25-dmnd12954-sppg0.4-mv1.2727272727272727.json  (+64 more)
src/heuristic/: initialSolution.cpp  solution.cpp
src/problem/: problem.cpp
tests/: tests.cpp
